adding review module
